# ai-product-backlog-generator

./: .env.example  .gitignore  README.md  config.py  cypress.config.js  locustfile.py  package-lock.json  package.json  pyproject.toml  render.yaml  run.py
app/: __init__.py  extensions.py
app/models/: __init__.py  backlog.py  epic.py  persona.py  product.py  requirement.py  revision.py  user.py  user_story.py
app/routes/: auth.py  backlog_bp.py  dashboard_bp.py  epic_bp.py  product_bp.py  requirement_bp.py  settings_bp.py  user_story_bp.py
app/services/: backlog_service.py  epic_service.py  llm_service.py  logging_service.py  product_service.py  requirement_service.py  user_story_service.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: backlog.html  base.html  dashboard.html  epics.html  product_detail.html  products.html  requirements.html  stories.html
app/templates/auth/: login.html  register.html
app/utils/: prompt_templates.py
cypress/e2e/: dashboard.cy.js  login.cy.js  produto.feature
cypress/e2e/step_definitions/: produto_steps.js
github/workflows/: ci.yml
logs/: llm_interactions_2025-07.jsonl  llm_interactions_2026-02.jsonl
migrations/: env.py
migrations/versions/: 3353bf69da4a_increase_password_hash_length.py  789a8f8ff6f4_initial_database_setup.py  add_generated_by_llm_epics.py  add_llm_interactions_table.py  e9bf6b2f031b_add_generated_by_llm_to_requirements.py
tests/tests/: conftest.py  test_auth.py  test_llm_service.py  test_logging_service.py  test_models.py
