[project]
name = "assistente-artefatos-ageis"
version = "0.1.0"
description = "Ferramentas de apoio ao projeto"
authors = [
    {name = "Marcus Luz", email = "marcusvyni3@gmail.com"}
]
readme = "README.md"
# REMOVI A LINHA PACKAGE-MODE DAQUI
requires-python = ">=3.12,<3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "groq (>=0.29.0,<0.30.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "gunicorn (>=25.1.0,<26.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
]

# NOVO BLOCO: COLOQUE ISSO AQUI PARA O POETRY NÃO TENTAR EMPACOTAR O PROJETO
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"